# Vision-Platform-Prototype

./: .gitignore  AGENTS.md  Agents.md  GlobalRoadmap.md  LICENSE  MODULE_INDEX.md  ProjectAgents.md  ProjectDescription.md  README.md  pyproject.toml  requirements-opencv.txt  run_command_flow_demo.py  run_focus_preview_demo.py  run_hardware_preview_demo.py  run_opencv_preview_demo.py  run_opencv_save_demo.py  run_overlay_payload_demo.py  run_simulated_demo.py  run_snapshot_smoke.py  test_vimba.py
camera_app/: __init__.py
configs/: camera_aliases.json  camera_configuration_profiles.json
docs/: ARCHITECTURE_BASELINE.md  COMMANDS.md  DOCUMENTATION_PLAYBOOK.md  ENTRYPOINT_AND_LAUNCH_BASELINE.md  GlobalRoadmap.md  HARDWARE_CAPABILITIES.md  HARDWARE_EVALUATION.md  HOST_CONTRACT_BASELINE.md  MANUALS_INDEX.md  MODULE_INDEX.md  NEXT_SESSION_ORDER.md  PRIORITIES.md  PYTHON_BASELINE_ENVIRONMENT.md  PYTHON_BASELINE_RUNBOOK.md  ProjectAgents.md  ProjectDescription.md  RECORDING_LIFECYCLE_BOUNDARY.md  REFERENCE_SCENARIOS.md  ROADMAP.md  SERVICE_OVERVIEW.md  SESSION_START.md  STATUS.md  StatusHistory.md  StatusReport.md  TARGET_MAP.md  USER_MANUAL.md  WORKFLOW.md  WORKPACKAGES.md  architecture_principles.md  branch_backlog.md  current_state.md  git_strategy.md  migration_plan.md  module_doc_audit.md  project_overview.md  reorientation_review_2026-04-09.md  root_category_audit.md  target_structure.md
scripts/: bootstrap.ps1  run_python_baseline.ps1
tests/: _path_setup.py  test_api_service.py  test_artifact_reference_service.py  test_bootstrap.py  test_camera_aliases.py  (+52 more)
(+418 files in other folders)
