[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-platform-prototype"
version = "0.1.0"
description = "Vision platform prototype with Allied Vision Vimba X integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
opencv = [
    "numpy>=1.26",
    "opencv-python>=4.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
